--- a/underconstruction/index.html
+++ b/underconstruction/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="contact-info">
-            <p>For inquiries, contact us at: <a href="callto:7200408132">+91 72004 08132</a></p>
+            <p>For inquiries, contact us at: <a href="tel:7200408132">+91 72004 08132</a></p>
             <!-- <p>Call us at: <a href="tel:+6379358673">+91 87784 00921</a></p> -->
         </div>
     </div>
@@ -46,7 +46,7 @@
     <!-- JavaScript for Countdown Timer -->
     <script>
         // Set the launch date
-        var launchDate = new Date("Dec 31, 2024 15:00:00").getTime();
+        var launchDate = new Date("Jan 01, 2025 15:00:00").getTime();
 
         // Update the countdown every second
         var countdownInterval = setInterval(function() {
